fix(form): adjust alignment for safari #17

--- a/packages/components/src/components/form/bal-checkbox/bal-checkbox.scss
+++ b/packages/components/src/components/form/bal-checkbox/bal-checkbox.scss
@@ -36,6 +36,7 @@ bal-checkbox {
       contain: layout style;
 
       display: flex;
+      align-self: baseline;
       align-items: center;
       justify-content: flex-start;
       text-align: left;
