--- a/packages/components/src/components/form/bal-radio/bal-radio.scss
+++ b/packages/components/src/components/form/bal-radio/bal-radio.scss
@@ -36,6 +36,7 @@ bal-radio.bal-radio:not(.bal-select-button) {
     contain: layout style;
 
     display: flex;
+    align-self: baseline;
     align-items: center;
     justify-content: flex-start;
     text-align: left;
